--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "bootstrap": "4.6.x",
+    "jquery": "^3.6.4",
+    "jwt-decode": "^3.1.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
