--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.1.0",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "bootstrap": "4.6.x",
+    "bootstrap-icons": "^1.10.3",
     "jquery": "^3.6.4",
     "jwt-decode": "^3.1.2",
     "popper.js": "^1.16.1",
