--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,8 @@
     "jquery": "^3.6.4",
     "jwt-decode": "^3.1.2",
     "popper.js": "^1.16.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
