--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -27,10 +27,7 @@
             "styles": [
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "./node_modules/bootstrap/scss/bootstrap.scss",
-              "src/styles.css",
-              "node_modules/primeicons/primeicons.css",
-    "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-    "node_modules/primeng/resources/primeng.min.css"
+              "src/styles.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
